# yes-browser

./: .gitignore  CHANGELOG.md  haskell-opengl.cabal  ok.hs  readme.md  script.js  style.css  tmp.html
app/: BoxTree.hs  CSSParser.hs  Display.hs  ElementStyle.hs  GlobalScroll.hs  GlobalStyle.hs  HTMLParser.hs  Main.hs
app/GlobalStates/: GlobalDOM.hs  GlobalEventLoop.hs  GlobalScroll.hs  GlobalStyle.hs
app/ParserUtils/: BaseParser.hs  CheckParser.hs  Parser.hs  ParsingUtils.hs
app/Parsers/: CSSParser.hs  ElementStyle.hs  HTMLParser.hs  JSParser.hs
app/Parsers/ParserUtils/: BaseParser.hs  CheckParser.hs  Parser.hs  ParsingUtils.hs
testFiles/: file.html
