cabal-version:      2.4
name:               yes-browser
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             hamzam3
maintainer:         hamza.maimoune3@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable haskell-opengl
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    BoxTree,
                      Display,
                      GlobalStates.GlobalStyle,
                      GlobalStates.GlobalScroll,
                      GlobalStates.GlobalEventLoop,
                      Parsers.HTMLParser,
                      Parsers.CSSParser,
                      Parsers.JSParser,
                      Parsers.ElementStyle
                      Parsers.ParserUtils.BaseParser,
                      Parsers.ParserUtils.CheckParser,
                      Parsers.ParserUtils.Parser,
                      Parsers.ParserUtils.ParsingUtils

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0,
                      OpenGL ^>=3.0.3.0,
                      GLUT ^>=2.7.0.16,
                      StateVar ^>=1.2.1,
                      FTGL,
                      lens,
                      Unique,
                      containers
    hs-source-dirs:   app
    extra-lib-dirs:   /usr/local/lib
    other-extensions: ForeignFunctionInterface
    extra-libraries: ftgl
    default-language: Haskell2010
